--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,8 @@
-  
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
+
+    body{
+        font-family: 'Ubuntu', sans-serif;
+    }
     .container {
         font-size: 12px;
         width: 100%;
