--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
+    /* Google Fonts Input */
+    @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
 
-    body{
+    /* This is a single-line comment */
+
+    .body{
         font-family: 'Ubuntu', sans-serif;
     }
     .container {
@@ -45,4 +48,4 @@
     }
 
     
-
+/* This is a single-line comment */
