--- a/css/styles.css
+++ b/css/styles.css
@@ -687,6 +687,8 @@ progress {
 
 .col {
   flex: 1 0 0%;
+  text-align: center;
+
 }
 
 .row-cols-auto > * {
@@ -2195,7 +2197,7 @@ progress {
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
-  background-color: #6c757d;
+  background-color: #cfcfcf;
   background-clip: padding-box;
   border: 0rem solid #ced4da;
   -webkit-appearance: none;
@@ -2573,12 +2575,15 @@ textarea.form-control-lg {
 .form-range {
   width: 100%;
   height: 1.5rem;
-  padding: 0;
+  padding: 5px;
   background-color: transparent;
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
+
 }
+
+
 .form-range:focus {
   outline: 0;
 }
@@ -7006,6 +7011,7 @@ textarea.form-control-lg {
 
 .min-vh-100 {
   min-height: 100vh !important;
+  background-color: #0d5a4b;
 }
 
 .flex-fill {
@@ -7377,6 +7383,11 @@ textarea.form-control-lg {
 
 .mb-4 {
   margin-bottom: 1.5rem !important;
+}
+
+.teamStory{
+  color: #0c4128;
+  text-decoration-color: #087990;
 }
 
 .mb-5 {
@@ -11297,6 +11308,7 @@ html {
 
 .page-section {
   padding: 1rem 0;
+  background-color: #1abc9c;
 }
 .page-section .page-section-heading {
   font-size: 1rem;
